# digispec

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
.github/workflows/: ci.yml
cmake/: external-lib.cmake  install-config.cmake  install-rules.cmake  sources.cmake  variables.cmake
include/digispec/: digiparser.hpp  digispec.hpp  digitokenizer.hpp  util.hpp
src/digispec/: digiparser.cpp  digispec.cpp  digitokenizer.cpp
test/: CMakeLists.txt
test/resources/: resource.digi  test.digi
test/src/: digispec_test.cpp
